--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ProveYourSelf</title>
+        <title>QuizWebApp</title>
 
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
